Add support for various Yamaha keyboards.

MFC after:	1 week
PR:		usb/174254